<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@android:color/holo_purple"
        android:padding="5dp"
        android:text="@string/bot_n_1"
        android:textColor="@android:color/background_light" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:background="@android:color/holo_blue_bright"
        android:padding="5dp"
        android:text="@string/bot_n_2"
        android:textColor="@android:color/background_light"/>

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="140dp"
        android:background="@android:color/holo_blue_dark"
        android:padding="5dp"
        android:text="@string/bot_n_3"
        android:textColor="@android:color/background_light"/>

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="200dp"
        android:background="@android:color/holo_green_dark"
        android:padding="5dp"
        android:text="@string/bot_n_4"
        android:textColor="@android:color/background_light"/>

    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="260dp"
        android:background="@android:color/holo_orange_dark"
        android:padding="5dp"
        android:text="@string/bot_n_5"
        android:textColor="@android:color/background_light"/>

    <Button
        android:id="@+id/button6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="320dp"
        android:background="@android:color/holo_red_dark"
        android:padding="5dp"
        android:text="@string/bot_n_6"
        android:textColor="@android:color/background_light"/>

</RelativeLayout>